static/css/style.css
* {
	-webkit-user-select: none;
	-moz-user-select: none;
	user-select: none;
}

html{font-size: 62.5%}

body{
	 background-image: url('bg_tile.png');
	background-color: #AAA;	
	font-family: 'Open Sans', sans-serif !important;
	text-transform: uppercase;

}

.container,
.container-fluid
{
	padding-left:0 !important;
	padding-right:0 !important;
}

/*Medium Screens*/
@media (max-width: 900px) { 
	body{
		font-size: 100% !important;
	}
}

/*Medium Screens*/
@media (max-width: 700px) { 
	body{
		font-size: 100% !important;
	}
	
	.album_image{
		padding-top: 1.1em !important;
	}
	
	.track_info
	{
		padding-left: 20px !important;
	}
}	

/*Medium Screens*/
@media (max-width: 450px) { 
	body{
		font-size: 85.0% !important;
	}
}

/* SEARCH */

.info{
	padding: 3em 3em 1.3em 3em;
	font-size: 1.2em;
}
/*PLAYLIST*/
.start-container{
	background-color: #5E5E5E !important;
	margin-bottom: 5em;
	color: #A9A9A9;
	-moz-box-shadow: 0 -2px 9px rgba(0, 0, 0, 0.46), inset 0 1px 0 rgba(255, 255, 255, 0.11);
    -webkit-box-shadow: 0 -2px 9px rgba(0, 0, 0, 0.46), inset 0 1px 0 rgba(255, 255, 255, 0.11);
    box-shadow: 0 -2px 9px rgba(0, 0, 0, 0.46), inset 0 1px 0 rgba(255, 255, 255, 0.11);

}
.playlist-container{
	margin-top: -2px;
}
.playlist{
	border-radius: 0px !important;
	width = 100%;
	text-align: left;
	margin: 3px 0px;

	font-size: 2em;
	font-weight: 700;
	color: #D8D8D8;
	background-color: #4B4B4B;

	padding-top: 4px;
	padding-bottom: 2px;

}
.addplaylist{
	height: 100% !important;
	font-size: 1.4em;
	background-color: transparent !important;
	border: 0px !important;


	width: 100%;
	height: 52px;
	box-sizing: border-box;
	text-align: center;
}

.addplaylist p {
	margin: 0px;
	padding-top: 1em;
}


.addplaylist p em{
	margin: 0px;
	padding-top: 1em;
}

/* TRACK LIST */ 
.trackList{
	list-style-type: none;
	margin: 0.5em 1em;
	padding: 0em 0em;
}

/* TRACK ITEM */
.track{
	background-color: #8B8B8B;
	border-radius: 0px !important;
	border-right-style: solid;
	border-right-width: 5px;
	border-right-color: #86FF6A; 

	border-left-style: solid;
	border-left-width: 5px;
	border-left-color: #FB9494; 

	position:relative;


    -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
    -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);

}
.list-group-item{
	background-color: transparent;
	border-width: 0px;
	padding: 0px;
}

.queue_value-container{
	position:relative;
}

.queue_value-container p{
  width:50%;
  height: 50%;
  overflow: auto;
  margin: auto;
  position: absolute;
  top: 0; left: 0; bottom: 0; right: 0; 
}
.album_image{
	margin-right: 1em;
	padding: 5px 0em;
    max-width: 100%;
    height: auto;
    min-width: 48px;     
}

.track_info{
	padding: 0em;
	padding-top: 1em;
	padding-left: 10px;
}

.track_title{
	margin: 0.3em 0em;
	font-size: 2em;
	font-weight: 700;
}

.artist{
	margin-top: 0em;
 	font-size: 1.5em;
 	font-weight: 300;
}


.rating p {
	font-size: 5em;
	font-weight: 700;
    text-transform: uppercase;
    text-shadow: 0.2px 3px 3px rgba(0, 0, 0, 0.14);
}
.good{
	color: #86FF6A;
}
.neutral{
	color: #E8E8E8;
}
.bad{
	color: #FB9494;
}
.user_image-container{
	position: relative;
}

.user_image img{
  width:50%;
  height: 50%;
  overflow: auto;
  margin: auto;
  position: absolutex;
  top: 0; left: 0; bottom: 0; right: 0; 
}

.search_container
{
	width:100%;height:52px;
	box-sizing: border-box;
	text-align:center;
	background-color: #5E5E5E;
  border-top: 1px solid #323232;
  border-bottom: 1px solid #323232;
  -moz-box-shadow: 0 0 9px rgba(0, 0, 0, 0.46), inset 0 1px 0 rgba(255, 255, 255, 0.11);
  -webkit-box-shadow: 0 0 9px rgba(0, 0, 0, 0.46), inset 0 1px 0 rgba(255, 255, 255, 0.11);
  box-shadow: 0 0 9px rgba(0, 0, 0, 0.46), inset 0 1px 0 rgba(255, 255, 255, 0.11);
}

.row
{
	margin: 0px;
}


.search_container input, .addplaylist input 
{
	width:90%;
	margin: 10px auto;
	font-size: 14px;
	border-radius:20px;
	color: #fff;
	border:none;
	padding:5px 16px;
	text-transform:uppercase;
	outline:none;
	-webkit-user-select: auto !important;
	user-select:auto !important;
	background-color: #424242;
  -moz-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.14);
  -webkit-box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.14);
  box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.14);
}

.currentPlaylist
{
	font-size:12px;
	padding-top:5px;
	padding-right: 10px;
	padding-bottom:3px;
	color:#9c9c9c;
}


.searchList
{
	background-color: #5e5e5e;
}

.searchRow
{
	background-color: #5e5e5e !important;
	color: #fff !important;
	padding:10px;
	border-bottom:1px solid #6c6c6c;
	border-left:0 !important;
	border-right:0 !important;
}

.trackAdd
{
	text-align: center;
	font-weight: bold;
	font-size: 40px;
	opacity: 0.6;
	line-height:1;
}

.searchRow .artist
{
	color: #8c8c8c !important;
}


.red {
	background: #e8a4a4;
	width: 1%;
	height:100%;

	animation: animationScaleRed ease-in-out 0.45s;
	animation-iteration-count: 1;
	transform-origin: 50% 50%;
	animation-fill-mode:forwards; /*when the spec is finished*/
	-webkit-animation: animationScaleRed ease-in-out 0.45s;
	-webkit-animation-iteration-count: 1;
	-webkit-transform-origin: 50% 50%;
	-webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
	z-index: 999;
}

@keyframes animationScaleRed{
  0% {
    transform:  scaleX(0.10) ;
  }
  40% {
    transform:  scaleX(4.35) ;
  }
  100% {
    transform:  scaleX(1.00) ;
  }
}
@-webkit-keyframes animationScaleRed {
  0% {
    -webkit-transform:  scaleX(0.10) ;
  }
  40% {
    -webkit-transform:  scaleX(4.35) ;
  }
  100% {
    -webkit-transform:  scaleX(1.00) ;
  }

}

.green {
	background: #bbf1b3;
	width: 1%;
	height: 100%;

	animation: animationScaleGreen ease-in-out 0.45s;
	animation-iteration-count: 1;
	transform-origin: 50% 50%;
	animation-fill-mode:forwards; /*when the spec is finished*/
	-webkit-animation: animationScaleGreen ease-in-out 0.45s;
	-webkit-animation-iteration-count: 1;
	-webkit-transform-origin: 50% 50%;
	-webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
}

@keyframes animationScaleGreen{
  0% {
    transform:  scaleX(0.10) ;
  }
  40% {
    transform:  scaleX(4.35) ;
  }
  100% {
    transform:  scaleX(1.00) ;
  }
}
@-webkit-keyframes animationScaleGreen {
  0% {
    -webkit-transform:  scaleX(0.10) ;
  }
  40% {
    -webkit-transform:  scaleX(4.35) ;
  }
  100% {
    -webkit-transform:  scaleX(1.00) ;
  }
}

.wrappergreen {
	position: absolute;
	width: 100%;
	height: 100%;
	z-index: 999;

	animation: animationMoveGreenWrapper ease-out 0.45s;
	animation-iteration-count: 1;
	transform-origin: 50% 50%;
	animation-fill-mode:forwards; /*when the spec is finished*/
	-webkit-animation: animationMoveGreenWrapper ease-out 0.45s;
	-webkit-animation-iteration-count: 1;
	-webkit-transform-origin: 50% 50%;
	-webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
}

@keyframes animationMoveGreenWrapper{
  0% {
    transform:  translate(0px,0px)  ;
  }
  100% {
    transform:  translate(99%,0px)  ;
  }
}
@-webkit-keyframes animationMoveGreenWrapper {
  0% {
    -webkit-transform:  translate(0px,0px)  ;
  }
  100% {
    -webkit-transform:  translate(99%,0px)  ;
  }
}

.wrapperred {
	position: absolute;
	width: 100%;
	height: 100%;
	z-index:999;

	animation: animationMoveRedWrapper ease-out 0.45s;
	animation-iteration-count: 1;
	transform-origin: 50% 50%;
	animation-fill-mode:forwards; /*when the spec is finished*/
	-webkit-animation: animationMoveRedWrapper ease-out 0.45s;
	-webkit-animation-iteration-count: 1;
	-webkit-transform-origin: 50% 50%;
	-webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/ 
}

@keyframes animationMoveRedWrapper{
  0% {
    transform:  translate(99%,0px)  ;
  }
  100% {
    transform:  translate(0px,0px)  ;
  }
}
@-webkit-keyframes animationMoveRedWrapper {
  0% {
    -webkit-transform:  translate(99%,0px)  ;
  }
  100% {
    -webkit-transform:  translate(0px,0px)  ;
  }
}

.logo
{
	margin-top:15px;
}

